# jtypes

./: .gitignore  CMakeLists.txt  README.md
inc/jtypes/: jtypes.h  jtypes.hpp  jtypes_io.hpp
tests/: test_compile_units.cpp  test_jtypes.cpp
